Cleaning up acquisitions, adding breadcrumbs, adding resident search. Other minor corrections.
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/lib/jquery/plugins/jquery.tabs.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/lib/jquery/plugins/jquery.tabs.css
@@ -49,6 +49,7 @@
 	border-bottom: 1px solid #FF9900;
 	border-left: 1px solid #FFCC66;
 	font-weight : bold;
+	text-align : center;
 	text-decoration : none;
 	top : -1px;
 }
