--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderempty.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderempty.tmpl
@@ -1,8 +1,8 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Shopping Basket For: <!-- TMPL_VAR name="bookselname" --></title>
+<title>Koha &rsaquo; Acquisitions &rsaquo; Shopping Basket <!-- TMPL_VAR NAME="basketno" --> &rsaquo; <!-- TMPL_IF name="ordnum" -->Modify order details (line #<!-- TMPL_VAR NAME="ordnum" -->)<!-- TMPL_ELSE -->New order<!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<script language="javascript">
-<!--
+<script type="text/javascript">
+//<![CDATA[
 function update(f){
 //collect values
 quantity=f.quantity.value
@@ -41,8 +41,6 @@ f.GST.value=GST;
 return true;
 }
 
-
-
 function messenger(X,Y,etc){
     win=window.open("","mess","height="+X+",width="+Y+",screenX=150,screenY=0");
     win.focus();
@@ -66,17 +64,20 @@ if (quantity ==0) {
 }
     document.frusin.submit();
 }
+//]]>
 </script>
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/acqui/acqui-home.pl">Acquisitions</a> &rsaquo; <a href="/cgi-bin/koha/acqui/basket.pl?basketno=<!-- TMPL_VAR NAME="basketno" -->">Shopping Basket <!-- TMPL_VAR NAME="basketno" --></a> &rsaquo; <!-- TMPL_IF name="ordnum" -->Modify order details (line #<!-- TMPL_VAR NAME="ordnum" -->)<!-- TMPL_ELSE -->New order<!-- /TMPL_IF --></div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 	
 
 <h1>
@@ -88,28 +89,22 @@ if (quantity ==0) {
         <!-- TMPL_IF name="suggestionid" -->(defined from suggestion #<!-- TMPL_VAR NAME="suggestionid" -->)<!-- /TMPL_IF -->
 </h1>
 
-<fieldset>
-    <legend>Basket Details</legend>
-    <p>
-        <!-- TMPL_IF name="basketno" -->
-            <label>Basket Number</label><!-- TMPL_VAR NAME="basketno" -->
-        <!-- TMPL_ELSE -->
-            New basket
-        <!-- /TMPL_IF -->
-        &nbsp;
-    </p>
-    <p><label>Managed By</label><!-- TMPL_VAR NAME="authorisedbyname" -->&nbsp;</p>
-    <p><label>Open On</label><!-- TMPL_VAR NAME="creationdate" -->&nbsp;</p>
-    <p><label>For</label>Supplier Id <!-- TMPL_VAR NAME="booksellerid" -->&nbsp;</p>
-    <p><label>Invoice Number</label><!-- TMPL_VAR NAME="booksellerinvoicenumber" -->&nbsp;</p>
-    <!-- TMPL_IF name="closedate" --><p><label>Closed On:</label> <!-- TMPL_VAR name="closedate" --></p><!-- /TMPL_IF -->
-</fieldset>
+<!-- TMPL_IF name="basketno" -->
+<div id="basket-details">Basket Details
+    <p>Basket Number: <!-- TMPL_VAR NAME="basketno" --></p>
+    <p>Managed By: <!-- TMPL_VAR NAME="authorisedbyname" --></p>
+    <p>Open On: <!-- TMPL_VAR NAME="creationdate" --></p>
+    <p>ForSupplier Id: <!-- TMPL_VAR NAME="booksellerid" --></p>
+    <p>Invoice Number: <!-- TMPL_VAR NAME="booksellerinvoicenumber" --></p>
+    <!-- TMPL_IF name="closedate" --><p>Closed On: <!-- TMPL_VAR name="closedate" --></p><!-- /TMPL_IF -->
+</div>
+<!-- /TMPL_IF -->
 
 <form action="/cgi-bin/koha/acqui/addorder.pl" method="post" name="frusin">
     <fieldset>
         <legend>Catalogue details</legend>
         <!-- TMPL_UNLESS name="existing" -->
-            <input type="hidden" name="existing" value="no" />
+		<input type="hidden" name="existing" value="no" />
         <!-- /TMPL_UNLESS -->
         <input type="hidden" name="ordnum" value="<!-- TMPL_VAR NAME="ordnum" -->" />
         <input type="hidden" name="basketno" value="<!-- TMPL_VAR NAME="basketno" -->" />
@@ -126,60 +121,66 @@ if (quantity ==0) {
             <input type="hidden" name="<!-- TMPL_VAR NAME="currency" -->" value="<!-- TMPL_VAR NAME="rate" -->" />
         <!-- /TMPL_LOOP -->
         <p>
-            <label><b>Title *</b></label>
             <!-- TMPL_IF name="biblio" -->
+			<strong>Title</strong>
                 <input type="hidden" size="20" name="title" value="<!-- TMPL_VAR NAME="title" -->" /><!-- TMPL_VAR NAME="title" -->
             <!-- TMPL_ELSE -->
-                <input type="text" size="20" name="title" value="<!-- TMPL_VAR NAME="title" -->" />
+            <label for="title" class="required">Title</label>
+                <input type="text" id="title" size="20" name="title" value="<!-- TMPL_VAR NAME="title" -->" />
             <!-- /TMPL_IF -->
         </p>
         <p>
-            <label>Author</label>
             <!-- TMPL_IF name="biblio" -->
+			<strong>Author</strong>
                 <input type="hidden" size="20" name="author" value="<!-- TMPL_VAR NAME="author" -->" /><!-- TMPL_VAR NAME="author" -->
             <!-- TMPL_ELSE -->
-                <input type="text" size="20" name="author" value="<!-- TMPL_VAR NAME="author" -->" />
+            <label for="author">Author</label>
+                <input type="text" id="author" size="20" name="author" value="<!-- TMPL_VAR NAME="author" -->" />
             <!-- /TMPL_IF -->
         </p>
         <p>
-            <label> Publisher</label>
             <!-- TMPL_IF name="biblio" -->
+			<strong>Publisher</strong>
                 <input type="hidden" size="20" name="publishercode" value="<!-- TMPL_VAR NAME="publishercode" -->" /><!-- TMPL_VAR NAME="publishercode" -->
             <!-- TMPL_ELSE -->
-                <input type="text" size="20" name="publishercode" value="<!-- TMPL_VAR NAME="publishercode" -->" />
+            <label for="publishercode"> Publisher</label>
+                <input type="text" id="publishercode" size="20" name="publishercode" value="<!-- TMPL_VAR NAME="publishercode" -->" />
             <!-- /TMPL_IF -->
         </p>
         <p>
-            <label>Copyright Date</label>
             <!-- TMPL_IF name="biblio" -->
+			<strong>Copyright Date</strong>
                 <input type="hidden" size="20" name="copyrightdate" value="<!-- TMPL_VAR NAME="copyrightdate" -->" /><!-- TMPL_VAR NAME="copyrightdate" -->
             <!-- TMPL_ELSE -->
-                <input type="text" size="20" name="copyrightdate" value="<!-- TMPL_VAR NAME="copyrightdate" -->" />
+            <label for="copyrightdate">Copyright Date</label>
+                <input type="text" id="copyrightdate" size="20" name="copyrightdate" value="<!-- TMPL_VAR NAME="copyrightdate" -->" />
             <!-- /TMPL_IF -->
         </p>
         <p>
-            <label>Format</label>
+            <label for="format">Format</label>
             <!-- TMPL_VAR NAME="CGIitemtype" -->
         </p>
         <p>
-            <label>ISBN</label>
             <!-- TMPL_IF name="biblio" -->
+			<strong>ISBN</strong>
                 <input type="hidden" size="20" name="ISBN" value="<!-- TMPL_VAR NAME="isbn" -->" /><!-- TMPL_VAR NAME="isbn" -->
             <!-- TMPL_ELSE -->
-                <input type="text" size="20" name="ISBN" value="<!-- TMPL_VAR NAME="isbn" -->" />
+            <label for="ISBN">ISBN</label>
+                <input type="text" id="ISBN" size="20" name="ISBN" value="<!-- TMPL_VAR NAME="isbn" -->" />
             <!-- /TMPL_IF -->
         </p>
         <p>
-            <label>Series</label>
             <!-- TMPL_IF name="biblio" -->
+			<strong>Series</strong>
                 <input type="hidden" size="20" name="series" value="<!-- TMPL_VAR NAME="seriestitle" -->" /><!-- TMPL_VAR NAME="seriestitle" -->
             <!-- TMPL_ELSE -->
-                <input type="text" size="20" name="series" value="<!-- TMPL_VAR NAME="seriestitle" -->" />
+            <label for="series">Series</label>
+                <input type="text" id="series" size="20" name="series" value="<!-- TMPL_VAR NAME="seriestitle" -->" />
             <!-- /TMPL_IF -->
         </p>
         <p>
-            <label>Branch</label>
-            <select name="branch">
+            <label for="branch">Branch</label>
+            <select name="branch" id="branch">
             <!-- TMPL_LOOP name="branchloop" -->
                 <!-- TMPL_IF NAME="selected" --><option value="<!-- TMPL_VAR NAME="value" -->" selected="selected"><!-- TMPL_VAR NAME="branchname" --></option>
 				<!-- TMPL_ELSE -->
@@ -192,94 +193,102 @@ if (quantity ==0) {
     <fieldset>
         <legend>Accounting details</legend>
             <p>
-                <label>Quantity</label>
                 <!-- TMPL_IF name="close" -->
+			<strong>Quantity</strong>
                     <input type="hidden" size="20" name="quantity" value="<!-- TMPL_VAR NAME="quantity" -->" /><!-- TMPL_VAR NAME="quantity" -->
                 <!-- TMPL_ELSE -->
-                    <input type="text" size="20" name="quantity" value="<!-- TMPL_VAR NAME="quantity" -->" onchange="update(this.form);" />
+                <label for="quantity">Quantity</label>
+                    <input type="text" id="quantity" size="20" name="quantity" value="<!-- TMPL_VAR NAME="quantity" -->" onchange="update(this.form);" />
                 <!--/TMPL_IF-->
             </p>
             <p>
-                <label>Bookfund</label>
                 <!-- TMPL_IF name="close" -->
+			<strong>Bookfund</strong>
                     <input type="hidden" size="20" name="bookfund" value="<!-- TMPL_VAR NAME="bookfundid" -->" /><!-- TMPL_VAR NAME="bookfundname" -->
                 <!-- TMPL_ELSE -->
+                <label for="bookfund">Bookfund</label>
                     <!-- TMPL_VAR NAME="CGIbookfund" -->
                 <!--/TMPL_IF-->
             </p>
             <p>
-                <label>Supplier price</label>
                 <!-- TMPL_IF name="close" -->
+			<strong>Supplier price</strong>
                     <input type="hidden" size="20" name="list_price" value="<!-- TMPL_VAR NAME="listprice" -->" /><!-- TMPL_VAR NAME="listprice" -->
                 <!-- TMPL_ELSE -->
-                    <input type="text" size="20" name="list_price" value="<!-- TMPL_VAR NAME="listprice" -->" onchange="update(this.form)" />
+                <label for="list_price">Supplier price</label>
+                    <input type="text" id="list_price" size="20" name="list_price" value="<!-- TMPL_VAR NAME="listprice" -->" onchange="update(this.form)" />
                 <!--/TMPL_IF-->
             </p>
             <p>
-                <label>Replacement Cost </label>
                 <!-- TMPL_IF name="close" -->
+			<strong>Replacement Cost</strong>
                     <input type="hidden" size="20" name="rrp" value="<!-- TMPL_VAR NAME="rrp" -->" /><!-- TMPL_VAR NAME="rrp" -->
                 <!-- TMPL_ELSE -->
-                    <input type="text" size="20" name="rrp" value="<!-- TMPL_VAR NAME="rrp" -->" />
+                <label for="rrp">Replacement Cost </label>
+                    <input type="text" id="rrp" size="20" name="rrp" value="<!-- TMPL_VAR NAME="rrp" -->" />
                 <!--/TMPL_IF-->
             </p>
             <p>
-                <label>Budgeted Cost</label>
                 <!-- TMPL_IF name="close" -->
-                    <input type="text" size="20" name="ecost" value="<!-- TMPL_VAR NAME="ecost" -->" readonly="readonly"  />
+			<strong>Budgeted Cost</strong>
+                    <input type="text" id="" size="20" name="ecost" value="<!-- TMPL_VAR NAME="ecost" -->" readonly="readonly"  />
                 <!-- TMPL_ELSE -->
-                    <input type="text" size="20" name="ecost" value="<!-- TMPL_VAR NAME="ecost" -->" />
+                <label for="ecost">Budgeted Cost</label>
+                    <input type="text" id="ecost" size="20" name="ecost" value="<!-- TMPL_VAR NAME="ecost" -->" />
                 <!--/TMPL_IF-->
             </p>
             <!-- TMPL_IF NAME="GST"-->
             <p>
-                <label>Budgeted GST</label>
 				<!-- TMPL_IF name="close" -->
-                <input type="text" size="20" name="GST" value="" readonly="readonly" />
+			<strong>Budgeted GST</strong>
+                <input type="text" id="" size="20" name="GST" value="" readonly="readonly" />
 				<!-- TMPL_ELSE -->
-                <input type="text" size="20" name="GST" value="" />
+                <label for="GST">Budgeted GST</label>
+                <input type="text" id="GST" size="20" name="GST" value="" />
 				<!--/TMPL_IF-->
             </p>
             <!-- /TMPL_IF -->
             <p>
-                <label><b>Total</b></label>
                 <!-- TMPL_IF name="close" -->
-				<input type="text" size="20" name="total" value="<!-- TMPL_VAR name="total" -->" readonly="readonly" />
+			<strong>Total</strong>
+				<input type="text" id="" size="20" name="total" value="<!-- TMPL_VAR name="total" -->" readonly="readonly" />
 				<!-- TMPL_ELSE -->
-                <input type="text" size="20" name="total" value="<!-- TMPL_VAR name="total" -->" />
+                <label for="total"><strong>Total</strong></label>
+                <input type="text" id="total" size="20" name="total" value="<!-- TMPL_VAR name="total" -->" />
 				<!--/TMPL_IF-->
             </p>
             <p>
-                <label>Actual Cost</label>
 				<!-- TMPL_IF name="close" -->
-                <input type="text" size="20" name="cost" value="<!-- TMPL_VAR name="ecost"-->" readonly="readonly" />
+			<strong>Actual Cost</strong>
+                <input type="text" id="" size="20" name="cost" value="<!-- TMPL_VAR name="ecost"-->" readonly="readonly" />
 				<!-- TMPL_ELSE -->
-                <input type="text" size="20" name="cost" value="<!-- TMPL_VAR name="ecost"-->" />
+                <label for="cost">Actual Cost</label>
+                <input type="text" id="cost" size="20" name="cost" value="<!-- TMPL_VAR name="ecost"-->" />
 				<!--/TMPL_IF-->
             </p>
             <p>
-                <label>Invoice Number</label>
-                <input type="text" size="20" name="invoice"  value="<!-- TMPL_VAR name="invoice" -->" />(usually empty)
+                <label for="invoice">Invoice Number</label>
+                <input type="text" id="invoice" size="20" name="invoice"  value="<!-- TMPL_VAR name="invoice" -->" />(usually empty)
             </p>
             <p>
-                <label>Notes</label>
-                <input type="text" size="20" name="notes" value="<!-- TMPL_VAR NAME="notes" -->" />
+                <label for="notes">Notes</label>
+                <input type="text" id="notes" size="20" name="notes" value="<!-- TMPL_VAR NAME="notes" -->" />
             </p>
             <p>The 2 following fields are available for your own usage. They can be useful for stat purposes</p>
             <p>
-                <label>Sort field 1</label>
                 <!-- TMPL_IF Name="CGIsort1" -->
                     <!-- TMPL_VAR Name="CGIsort1" -->
                 <!-- TMPL_ELSE -->
-                    <input type="text" size="20" name="sort1" value="<!-- TMPL_VAR NAME="sort1" -->" />
+                <label for="sort1">Sort field 1</label>
+                    <input type="text" id="sort1" size="20" name="sort1" value="<!-- TMPL_VAR NAME="sort1" -->" />
                 <!--/TMPL_IF -->
             </p>
             <p>
-                <label>Sort field 2</label>
                 <!-- TMPL_IF Name="CGIsort2" -->
                     <!-- TMPL_VAR Name="CGIsort2" -->
                 <!-- TMPL_ELSE -->
-                    <input type="text" size="20" name="sort2" value="<!-- TMPL_VAR NAME="sort2" -->" />
+                <label for="sort2">Sort field 2</label>
+                    <input type="text" id="sort2" size="20" name="sort2" value="<!-- TMPL_VAR NAME="sort2" -->" />
                 <!--/TMPL_IF -->
             </p>
     </fieldset>
@@ -289,7 +298,8 @@ if (quantity ==0) {
 </form>
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="acquisitions-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
