--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -258,7 +258,7 @@ div#header_search ul.link-tabs li.off a {
 	padding : 0.1em .5em .2em .5em;
 }
 
-div#circ_search,div#catalog_search,div#patron_search,div#subscription_search,div#addbooks_search,div#notices_search,div#printer_search {
+div#circ_search,div#catalog_search,div#patron_search,div#subscription_search,div#addbooks_search,div#notices_search,div#printer_search,div#checkin_search,div#suggestions_search {
 	border : 0;
 	border-bottom : 1px solid #FF9900;
 	padding : 0 0 .2em 0;
