--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/bookfund.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/bookfund.tmpl
@@ -1,120 +1,64 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->         
-<title>Koha &rsaquo; Acquisitions</title>                                     
+<title>Koha &rsaquo; Acquisitions &rsaquo; Book Funds</title>                                     
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->           
 </head>   
 <body>  
 <!-- TMPL_INCLUDE NAME="header.inc" -->                                   
-<!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->   
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->   
                                                                            
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/acqui/acqui-home.pl">Acquisitions</a> &rsaquo;  Book Funds</div>
 
 <div id="doc3" class="yui-t2">                          
 <div id="bd">         
 <div id="yui-main">               
 <div class="yui-b">               
-<div class="yui-g"> 
+ 
 
-
-<table cellspacing="0" cellpadding="0" border="0" id="spent" class="collapse">
-<tr valign="top">
-   <td class="cell-header">
-	 	Title
-	</td>
-	<td class="cell-header">
-	 	Order
-	</td>
-	<td class="cell-header">
-	 	Itemtype
-	</td>
-	<td class="cell-header">
-		Left on Order
-	</td>
-	<td class="cell-header">
-		Estimated cost per unit
-	</td>
-	<td class="cell-header">
-		Budget Date
-	</td>
-	<td class="cell-header">
-		Subtotal
-	</td>
+<table id="spent">
+<tr>
+   <th>Title</th>
+	<th>Order</th>
+	<th>Itemtype</th>
+	<th>Left on Order</th>
+	<th>Estimated cost per unit</th>
+	<th>Budget Date</th>
+	<th>Subtotal</th>
 </tr>
 
 <!--TMPL_LOOP NAME="commitedloop"-->
 	<!--TMPL_IF name="toggle"-->
-		<tr valign="top" class="hilighted">
+		<tr class="hilighted">
 	<!--TMPL_ELSE-->
-		<tr valign="top" class="hilighted2">
+		<tr class="hilighted2">
 	<!--/TMPL_IF-->
-	<tr valign="top">
-		<td class="cell">
-			<!--TMPL_VAR NAME="title"-->	
-		</td>
-		<td class="cell">
-				<a href=/cgi-bin/koha/acqui/newbiblio.pl?ordnum=<!--TMPL_VAR NAME="ordnum"-->&booksellerid=<!--TMPL_VAR NAME="booksellerid"-->&basket=<!--TMPL_VAR NAME="basketno"-->><!--TMPL_VAR NAME="ordnum"--></a>
-		</td>
-		<td class="cell">
-			<!--TMPL_VAR NAME="itemtype"-->	
-		</td>
-		<td class="cell">
-			<!--TMPL_VAR NAME="left"-->	
-		</td>
-		<td class="cell">
-			<!--TMPL_VAR NAME="ecost"-->	
-		</td>
-		<td class="cell">
-			<!--TMPL_VAR NAME="budgetdate"-->	
-		</td>
-		<td class="cell">
-			<!--TMPL_VAR NAME="subtotal"-->		
-		</td>
+	<tr>
+		<td><!--TMPL_VAR NAME="title"-->	</td>
+		<td>	<a href="/cgi-bin/koha/acqui/newbiblio.pl?ordnum=<!--TMPL_VAR NAME="ordnum"-->&amp;booksellerid=<!--TMPL_VAR NAME="booksellerid"-->&amp;basket=<!--TMPL_VAR NAME="basketno"-->"><!--TMPL_VAR NAME="ordnum"--></a></td>
+		<td><!--TMPL_VAR NAME="itemtype"-->	</td>
+		<td><!--TMPL_VAR NAME="left"-->	</td>
+		<td><!--TMPL_VAR NAME="ecost"-->	</td>
+		<td><!--TMPL_VAR NAME="budgetdate"-->	</td>
+		<td><!--TMPL_VAR NAME="subtotal"-->		</td>
 </tr>
 <!--/TMPL_LOOP-->
 
-<tr valign="top">
-   <td class="cell-header">
-	 	Total
-	</td>
-	<td class="cell-header">
-	 	
-	</td>
-	<td class="cell-header">
-	 	
-	</td>
-	<td class="cell-header">
-		
-	</td>
-	<td class="cell-header">
-		
-	</td>
-	<td class="cell-header">
-		
-	</td>
-	<td class="cell-header">
-		<!--TMPL_VAR NAME="total"-->
-	</td>
+<tr>
+   <th>Total</th>
+	<th>&nbsp;</th>
+	<th>&nbsp;</th>
+	<th>&nbsp;</th>
+	<th>&nbsp;</th>
+	<th>&nbsp;</th>
+	<th><!--TMPL_VAR NAME="total"--></th>
 </tr>
 
 </table>
 
-
-</div>  
-</div>  
-</div>  
-</div>  
-</div>  
-                                                                           
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->                                     
+</div>
+</div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="labels-menu.inc" -->
+</div>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
-
-
-
-
-
-
-
-
-
-
-
-
