--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/booksellers.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/booksellers.tmpl
@@ -4,13 +4,15 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/acqui/acqui-home.pl">Acquisitions</a> &rsaquo; </div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 	
 <h1>You searched on <b>supplier <!-- TMPL_VAR name="supplier" -->,</b> <!-- TMPL_VAR name="count" --> results found</h1>
 <div id="acqui_order_supplierlist">
@@ -24,19 +26,16 @@
 	
 	<!-- TMPL_LOOP name="loop_suppliers" -->
 		<tr>
-			<td>
-				<!-- TMPL_IF name="active" -->
+			<td>	<!-- TMPL_IF name="active" -->
 					<a href="basket.pl?supplierid=<!-- TMPL_VAR name="supplierid" -->">Add order</a>
 				<!-- TMPL_ELSE -->
 					Inactive
 				<!-- /TMPL_IF -->
 			</td>
-			<td>
-				<a href="parcels.pl?supplierid=<!-- TMPL_VAR name="supplierid" -->">Receive order</a>
+			<td>	<a href="parcels.pl?supplierid=<!-- TMPL_VAR name="supplierid" -->">Receive order</a>
 			</td>
 			<td><a href="supplier.pl?supplierid=<!-- TMPL_VAR name="supplierid" -->"><!-- TMPL_VAR name="name" --></a></td>
-			<td>
-				<table>
+			<td>	<table>
 				    <!-- TMPL_IF NAME="loop_basket"-->
 						<tr>
 							<th>Basket</th>
@@ -49,13 +48,11 @@
 							<tr>
 								<td><!-- TMPL_VAR NAME="basketno" --></td>
 								<td><TMPL_VAR NAME="total"></td>
-								<td>
-									<!-- TMPL_VAR name="firstname" -->
+								<td>						<!-- TMPL_VAR name="firstname" -->
 										<!-- TMPL_VAR name="surname" -->
 								</td>
 								<td><!-- TMPL_VAR NAME="creationdate" --></td>
-								<td>
-									<!-- TMPL_IF name="closedate" -->
+								<td>						<!-- TMPL_IF name="closedate" -->
 										closed on <!-- TMPL_VAR NAME="closedate" -->
 										<a href="/cgi-bin/koha/acqui/basket.pl?basketno=<!-- TMPL_VAR NAME="basketno" -->">View</a>
 									<!-- TMPL_ELSE -->
@@ -82,7 +79,8 @@
 </div>
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="acquisitions-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
