--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/histsearch.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/histsearch.tmpl
@@ -1,26 +1,20 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Acquisitions order search</title>
+<title>Koha &rsaquo; Acquisitions &rsaquo; Order search</title>
 <!-- TMPL_INCLUDE NAME="doc-head-calendar.inc" -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- Additions to enable Calendar system -->
-<link rel="stylesheet" type="text/css" href="/intranet-tmpl/prog/en/lib/calendar/calendar-system.css" />
-<!-- End of additions -->
-
-<!-- Additions to enable Calendar system -->
-<script type="text/javascript" src="/intranet-tmpl/prog/en/lib/calendar/calendar.js"></script>
-<script type="text/javascript" src="/intranet-tmpl/prog/en/lib/calendar/calendar-en.js"></script>
-<script type="text/javascript" src="/intranet-tmpl/prog/en/lib/calendar/calendar-setup.js"></script>
-<!-- End of additions -->
+<!-- TMPL_INCLUDE NAME="calendar.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/acqui/acqui-home.pl">Acquisitions</a> &rsaquo; Order search</div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 	
 
 
@@ -44,7 +38,7 @@
 					<th><input type="text" name="title" value="<!-- TMPL_VAR name="title"-->" /></th>
 					<th><input type="text" name="author" value="<!-- TMPL_VAR name="author" -->" /></th>
 					<th><input type="text" name="name" value="<!-- TMPL_VAR name="name" -->" /></th>
-					<th>From <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" border="0" hspace="0" vspace="0" id="openCalendarFrom" style="cursor: pointer;" alt="calendar" />
+					<th><label for="from">From</label> <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" border="0" id="openCalendarFrom" style="cursor: pointer;" alt="Show Calendar" />
 						<input type="text" readonly="readonly" size="10" id="from" name="fromplacedon" value="<!-- TMPL_VAR name="from_placed_on" -->" />
 						<script language="JavaScript" type="text/javascript">
 							function validate1(date) {
@@ -72,7 +66,7 @@
 								}
 							);
 						</script>
-						To <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="openCalendarTo" style="cursor: pointer;" alt="calendar" />
+						<label for="to">To</label> <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="openCalendarTo" style="cursor: pointer;" alt="Show Calendar" />
 						<input readonly="readonly" size="10" id="to" name="toplacedon" value="<!-- TMPL_VAR name="to_placed_on" -->" type="text" />
 						<script type="text/javascript">
 							function validate2(date) {
@@ -108,8 +102,7 @@
 			</tr>
 			<!-- TMPL_LOOP NAME="suggestions_loop" -->
 				<tr>
-					<td>
-					    <!-- TMPL_IF NAME="invoicenumber" -->
+					<td>		    <!-- TMPL_IF NAME="invoicenumber" -->
 					        <a href="/cgi-bin/koha/acqui/parcel.pl?invoice=<!-- TMPL_VAR NAME="invoicenumber"-->&amp;supplierid=<!-- TMPL_VAR NAME="id"-->&amp;datereceived=<!-- TMPL_VAR NAME="datereceived" -->">Parcel</a>
 					    <!-- TMPL_ELSE -->
 					        &nbsp;
@@ -131,7 +124,8 @@
 
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="acquisitions-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
