--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderbiblio.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/neworderbiblio.tmpl
@@ -1,18 +1,20 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Shopping basket for: <!-- TMPL_VAR name="bookselname" --></title>
+<title>Koha &rsaquo; Acquisitions &rsaquo; Search Existing Records</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/acqui/acqui-home.pl">Acquisitions</a> &rsaquo; </div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 	
-<h1>Shopping Basket For: <!-- TMPL_VAR name="bookselname" --></h1>
+<h1>Search Existing Records</h1>
 
 
 <!-- TMPL_IF NAME="total" -->
@@ -28,7 +30,7 @@
 <!-- TMPL_IF NAME="query_error" -->
 <br /><br />
 <b>Error :</b>
-<span  class="problem">
+<span class="problem">
     <!-- TMPL_VAR NAME="query_error" -->
 </span>
 <!-- /TMPL_IF -->
@@ -65,7 +67,8 @@
 
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="acquisitions-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
