--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/spent.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/spent.tmpl
@@ -1,132 +1,75 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->         
-<title>Koha &rsaquo; Acquisitions</title>                                     
+<title>Koha &rsaquo; Acquisitions &rsaquo; Budgets and Bookfunds: Spent</title>                                     
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->           
 </head>   
 <body>  
 <!-- TMPL_INCLUDE NAME="header.inc" -->                                   
-<!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/acqui/acqui-home.pl">Acquisitions</a> &rsaquo; Budgets and Bookfunds: Spent</div>
 
 <div id="doc3" class="yui-t2">
 <div id="bd">            
 <div id="yui-main">                         
 <div class="yui-b">
-<div class="yui-g">
 
-
-
-
-<h1>Budgets &amp; Bookfunds</h1>
+<h1>Budgets and Bookfunds</h1>
 <h2>Spent</h2>
 
 <br /><br />
 
 
-<table cellspacing="0" cellpadding="0" border="0" id="spent" class="collapse">
-<tr valign="top">
-   <td class="cell-header">
-	 	Title
-	</td>
-	<td class="cell-header">
-	 	Order
-	</td>
-	<td class="cell-header">
-	 	Supplier
-	</td>
-	<td class="cell-header">
-		Invoice
-	</td>
-	<td class="cell-header">
-		Itemtype
-	</td>
-	<td class="cell-header">
-		Receieved
-	</td>
-	<td class="cell-header">
-		Unit Price
-	</td>
-	<td class="cell-header">
-		Date Received
-	</td>
-	<td class="cell-header">
-		Subtotal
-	</td>
+<table id="spent">
+<tr>
+   <th>Title</th>
+	<th>Order</th>
+	<th>Supplier</th>
+	<th>Invoice</th>
+	<th>Itemtype</th>
+	<th>Receieved</th>
+	<th>Unit Price</th>
+	<th>Date Received</th>
+	<th>Subtotal</th>
 </tr>
 
 <!--TMPL_LOOP NAME="SPENTLOOP"-->
 	<!--TMPL_IF name="toggle"-->
-		<tr valign="top" class="hilighted">
+		<tr class="hilighted">
 	<!--TMPL_ELSE-->
-		<tr valign="top" class="hilighted2">
+		<tr class="hilighted2">
 	<!--/TMPL_IF-->
 	
-		<td class="cell">
-			<!--TMPL_VAR NAME="title"-->	
-		</td>
-		<td class="cell">
-                  <a href="/cgi-bin/koha/acqui/acquire.pl?recieve=<!--TMPL_VAR NAME="ordnum"-->&biblio=<!--TMPL_VAR NAME="biblionumber"-->&invoice=<!--TMPL_VAR NAME="booksellerinvoicenumber"-->&supplierid=<!--TMPL_VAR NAME="booksellerid"-->&catview=yes"><TMPL_VAR NAME="ordnum"--></a>
-		</td>
-		<td class="cell">
-			<!--TMPL_VAR NAME="booksellerid"-->	
-		</td>
-		<td class="cell">
-				<a href=/cgi-bin/koha/acqui/receive.pl?invoice=<!--TMPL_VAR NAME="booksellerinvoicenumber"-->&supplierid=<!--TMPL_VAR NAME="booksellerid"-->><!--TMPL_VAR NAME="booksellerinvoicenumber"--></a>
-		</td>
-		<td class="cell">
-			<!--TMPL_VAR NAME="itemtype"-->	
-		</td>
-		<td class="cell">
-			<!--TMPL_VAR NAME="qrev"-->	
-		</td>
-		<td class="cell">
-			<!--TMPL_VAR NAME="unitprice"-->		
-		</td>
-		<td class="cell">
-			<!--TMPL_VAR NAME="datereceived"-->		
-		</td>
-		<td class="cell">
-			<!--TMPL_VAR NAME="subtotal"-->		
-		</td>
+		<td><!--TMPL_VAR NAME="title"-->	</td>
+		<td>
+                  <a href="/cgi-bin/koha/acqui/acquire.pl?recieve=<!--TMPL_VAR NAME="ordnum"-->&amp;biblio=<!--TMPL_VAR NAME="biblionumber"-->&amp;invoice=<!--TMPL_VAR NAME="booksellerinvoicenumber"-->&amp;supplierid=<!--TMPL_VAR NAME="booksellerid"-->&amp;catview=yes"><TMPL_VAR NAME="ordnum"--></a></td>
+		<td><!--TMPL_VAR NAME="booksellerid"-->	</td>
+		<td>	<a href=/cgi-bin/koha/acqui/receive.pl?invoice=<!--TMPL_VAR NAME="booksellerinvoicenumber"-->&amp;supplierid=<!--TMPL_VAR NAME="booksellerid"-->><!--TMPL_VAR NAME="booksellerinvoicenumber"--></a></td>
+		<td><!--TMPL_VAR NAME="itemtype"-->	</td>
+		<td><!--TMPL_VAR NAME="qrev"-->	</td>
+		<td><!--TMPL_VAR NAME="unitprice"-->		</td>
+		<td><!--TMPL_VAR NAME="datereceived"-->		</td>
+		<td><!--TMPL_VAR NAME="subtotal"-->		</td>
 </tr>
 <!--/TMPL_LOOP-->
 
-<tr valign="top">
-   <td class="cell-header">
-	 	Total
-	</td>
-	<td class="cell-header">
-	 	
-	</td>
-	<td class="cell-header">
-	 	
-	</td>
-	<td class="cell-header">
-		
-	</td>
-	<td class="cell-header">
-		
-	</td>
-	<td class="cell-header">
-		
-	</td>
-	<td class="cell-header">
-		
-	</td>
-	<td class="cell-header">
-		
-	</td>
-	<td class="cell-header">
-		<!--TMPL_VAR NAME="total"-->
-	</td>
+<tr>
+   <th>Total</th>
+	<th>&nbsp;</th>
+	<th>&nbsp;</th>
+	<th>&nbsp;</th>
+	<th>&nbsp;</th>
+	<th>&nbsp;</th>
+	<th>&nbsp;</th>
+	<th>&nbsp;</th>
+	<th><!--TMPL_VAR NAME="total"--></th>
 </tr>
 
 </table>
 
-
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="acquisitions-menu.inc" -->
 </div>
 </div>
-</div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->                                     
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
